fix header dimensions on mobile

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -124,7 +124,9 @@
 		overflow: hidden;
 
 		.Header {
-			font-size: 40px;
+			margin-top: 10px;
+			margin-bottom: 30px;
+			font-size: 12vw;
 		}
 
 		.VoteSection {
